--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<html>
-    <body>
-        <h1>Hello from Team!</h1>
-    </body>
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Jumping Ball</title> <style> body { margin: 0; overflow: hidden; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #282c34; } canvas { background: white; } </style> </head> <body> <canvas id="gameCanvas"></canvas> <script> const canvas = document.getElementById("gameCanvas"); const ctx = canvas.getContext("2d"); canvas.width = window.innerWidth; canvas.height = window.innerHeight; let ball = { x: canvas.width / 2, y: canvas.height / 2, radius: 20, dy: 0, gravity: 0.5, bounce: -10 }; function update() { ctx.clearRect(0, 0, canvas.width, canvas.height); ball.dy += ball.gravity; ball.y += ball.dy; if (ball.y + ball.radius > canvas.height) { ball.y = canvas.height - ball.radius; ball.dy = ball.bounce; } ctx.beginPath(); ctx.arc(ball.x, ball.y, ball.radius, 0, Math.PI * 2); ctx.fillStyle = "red"; ctx.fill(); ctx.closePath(); requestAnimationFrame(update); } window.addEventListener("click", () => { ball.dy = ball.bounce; }); update(); </script> </body> </html>
