--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 </head>
 <body>
     <h1>Learning to Program</h1>
-    <img src="pic.jpg" alt="Learning to program">
+    <img src="pic1.jpg" alt="Learning to program">
 </body>
 </html>
